Fixed css spacing on sticky buttons and removed redundant divs

--- a/src/scss/gameComponents/createGameScreen.scss
+++ b/src/scss/gameComponents/createGameScreen.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     padding-right: 10%;
     padding-left: 10%;
+    margin-bottom: 5rem;
 }
 
 .gameOptionsCardTitle{
@@ -44,8 +45,13 @@
 .prevNextButtons{
     width: 5rem;
     margin-bottom: 1rem;
+    margin-top: 1rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
 }
-
+.containerButtons{
+    margin-bottom: 0.625rem;
+}
 .prevNextCol{
     text-align: center;
 }
